переклав частину представлень, поекспериментував з поверненням

--- a/Conferences/Views/Conferences/Create.cshtml
+++ b/Conferences/Views/Conferences/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Додати конференцію @ViewBag.LocationCity</h1>
 
-<h4>Conference</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -61,14 +60,14 @@
             <input type="hidden" value="@ViewBag.LocationId" name="LocationId" />
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Створити" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="Conferences" asp-action="Index" asp-route-id=@ViewBag.LocationId asp-route-name=@ViewBag.LocationCity>Back to List</a>
+    <a asp-controller="Conferences" asp-action="Index" asp-route-id=@ViewBag.LocationId asp-route-name="">Повернутись</a>
 </div>
 
 @section Scripts {
