--- a/Conferences/Views/ConferencesAndParticipants/Index.cshtml
+++ b/Conferences/Views/ConferencesAndParticipants/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Конференції та учасники</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Створити запис</a>
 </p>
 <table class="table">
     <thead>
@@ -25,15 +25,15 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Conference.Aim)
+                @Html.DisplayFor(modelItem => item.Conference.Title)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Participant.FullName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ConferenceAndParticipantId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ConferenceAndParticipantId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ConferenceAndParticipantId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ConferenceAndParticipantId">Редагувати</a> |
+                <a asp-action="Details" asp-route-id="@item.ConferenceAndParticipantId">Деталі</a> |
+                <a asp-action="Delete" asp-route-id="@item.ConferenceAndParticipantId">Видалити</a>
             </td>
         </tr>
 }
