--- a/Conferences/Views/Locations/Create.cshtml
+++ b/Conferences/Views/Locations/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Conferences.Location
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Створити";
 }
 
-<h1>Create</h1>
+<h1>Створити нову локацію</h1>
 
-<h4>Location</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,14 +27,14 @@
                 <span asp-validation-for="Capacity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Створити" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Повернутись</a>
 </div>
 
 @section Scripts {
