--- a/Conferences/Views/Conferences/Delete.cshtml
+++ b/Conferences/Views/Conferences/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Видалити конференцію</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ви впевнені, що хочете видалити конференцію?</h3>
 <div>
-    <h4>Conference</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -57,7 +56,7 @@
             @Html.DisplayNameFor(model => model.Form)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Form.AvailableAudienceSize)
+            @Html.DisplayFor(model => model.Form.FullName)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Location)
@@ -75,7 +74,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ConferenceId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
+        <a asp-action="Index">Повернутисьt</a>
     </form>
 </div>
