--- a/Conferences/Views/Conferences/Details.cshtml
+++ b/Conferences/Views/Conferences/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Деталі про конференцію</h1>
 
 <div>
-    <h4>Conference</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -56,7 +55,7 @@
             @Html.DisplayNameFor(model => model.Form)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Form.AvailableAudienceSize)
+            @Html.DisplayFor(model => model.Form.FullName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Location)
@@ -73,6 +72,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ConferenceId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ConferenceId">Редагувати</a> |
+    <a asp-action="Index">Повернутись</a>
 </div>
