--- a/Conferences/Views/Conferences/Edit.cshtml
+++ b/Conferences/Views/Conferences/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Редагувати конференцію</h1>
 
-<h4>Conference</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -64,14 +63,14 @@
                 <span asp-validation-for="LocationId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Зберегти" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Conferences" asp-action="Index" asp-route-id="1" asp-route-name="Київ">Повернутись</a>
 </div>
 
 @section Scripts {
