--- a/Conferences/Views/ConferencesAndParticipants/Create.cshtml
+++ b/Conferences/Views/ConferencesAndParticipants/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Створити</h1>
 
-<h4>ConferencesAndParticipant</h4>
+<h4>Конференції та учасники</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -21,14 +21,14 @@
                 <select asp-for="ConferenceId" class ="form-control" asp-items="ViewBag.ConferenceId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Створити" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Повернутись</a>
 </div>
 
 @section Scripts {
