--- a/Conferences/Views/ConferencesAndParticipants/Delete.cshtml
+++ b/Conferences/Views/ConferencesAndParticipants/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Видалити запис</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ви впевнені що хочете видалити запис?</h3>
 <div>
-    <h4>ConferencesAndParticipant</h4>
+    <h4>Конференції та учасники</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ConferenceAndParticipantId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
+        <a asp-action="Index">Повернутись</a>
     </form>
 </div>
