--- a/Conferences/Views/ConferencesAndParticipants/Details.cshtml
+++ b/Conferences/Views/ConferencesAndParticipants/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Деталі</h1>
 
 <div>
-    <h4>ConferencesAndParticipant</h4>
+    <h4>Конференції та учасники</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ConferenceAndParticipantId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ConferenceAndParticipantId">Редагувати</a> |
+    <a asp-action="Index">Повернутись</a>
 </div>
