--- a/Conferences/Views/Locations/Details.cshtml
+++ b/Conferences/Views/Locations/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Деталі про локацію</h1>
 
 <div>
-    <h4>Location</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +30,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.LocationId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.LocationId">Редагувати</a> |
+    <a asp-action="Index">Повернутись</a>
 </div>
