--- a/Conferences/Views/Locations/Edit.cshtml
+++ b/Conferences/Views/Locations/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Редагувати локацію</h1>
 
-<h4>Location</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,14 +28,14 @@
                 <span asp-validation-for="Capacity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Зберегти" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Повернутись</a>
 </div>
 
 @section Scripts {
