--- a/Conferences/Views/Locations/Index.cshtml
+++ b/Conferences/Views/Locations/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Conferences.Location>
 
 @{
-    ViewData["Title"] = "Локації";
+    ViewData["Title"] = "Locations";
 }
 
 <h1>Локації</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Створити нову</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Capacity)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.LocationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.LocationId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.LocationId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.LocationId">Редагувати</a> |
+                <a asp-action="Details" asp-route-id="@item.LocationId">Деталі</a> |
+                <a asp-action="Delete" asp-route-id="@item.LocationId">Видалити</a>
             </td>
         </tr>
 }
