--- a/Conferences/Views/WorksAndParticipants/Index.cshtml
+++ b/Conferences/Views/WorksAndParticipants/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Роботи та учасники</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Створити запис</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Work.Title)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.WorkAndParticipantId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.WorkAndParticipantId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.WorkAndParticipantId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.WorkAndParticipantId">Редагувати</a> |
+                <a asp-action="Details" asp-route-id="@item.WorkAndParticipantId">Деталі</a> |
+                <a asp-action="Delete" asp-route-id="@item.WorkAndParticipantId">Видалити</a>
             </td>
         </tr>
 }
