виправив стиль: хедери на норм висоті, діаграми тримають дистанцію

--- a/Conferences/Views/Locations/Index.cshtml
+++ b/Conferences/Views/Locations/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Локації</h1>
 
 <p>
-    <a asp-action="Create">Створити нову</a>
+    <a asp-action="Create">Створити нову локацію</a>
 </p>
 <table class="table">
     <thead>
@@ -47,18 +47,38 @@
     </tbody>
 </table>
 
+<div>
+    <h2>Оберіть exel-файл для заватаження</h2>
+    @using (Html.BeginForm("Import", "Locations", FormMethod.Post, new { enctype = "multipart/form-data", id = "frm-excel" }))
+    {
+        <div>
+            Завантажте Excel-файл:
+            <input type="file" name="fileExcel" id="fileExcel" />
+            <div>
+                <input type="submit" value="Завантажити" />
+            </div>
+        </div>
+    }
+</div>
+
+
+<div>
+    <h2>Відвантаження інформації у файл</h2>
+    <a asp-action="Export">Відвантажити</a>
+ </div>
+
 <div class="container">
     <div id="chart1"></div>
 </div>
 @section scripts{
-    <script type "text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script>
-    google.charts.load('current', { 'packages': ['corechart'] });
-    google.charts.setOnLoadCallback(drawChart);
+        google.charts.load('current', { 'packages': ['corechart'] });
+        google.charts.setOnLoadCallback(drawChart);
 
         function drawChart() {
 
-            $.get('/api/Charts/JsonData', function(JsonData) {
+            $.get('/api/Charts/JsonData', function (JsonData) {
                 data = google.visualization.arrayToDataTable(JsonData, false);
                 var option = {
                     title: "Співвідношення кількості локацій та конференцій",
