--- a/Conferences/Views/Shared/_Layout.cshtml
+++ b/Conferences/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Конференції</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap_vapor_theme.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap_vapor_theme.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
