--- a/Conferences/Views/Conferences/Details.cshtml
+++ b/Conferences/Views/Conferences/Details.cshtml
@@ -72,6 +72,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ConferenceId">Редагувати</a> |
-    <a asp-action="Index">Повернутись</a>
+    <a asp-action="Edit" asp-route-id="@Model.ConferenceId">Редагувати</a>
 </div>
