--- a/Conferences/Views/Conferences/Edit.cshtml
+++ b/Conferences/Views/Conferences/Edit.cshtml
@@ -70,7 +70,7 @@
 </div>
 
 <div>
-    <a asp-controller="Conferences" asp-action="Index" asp-route-id="1" asp-route-name="Київ">Повернутись</a>
+    <a asp-action="Index" asp-route-id="@ViewBag.LocationId">Повернутись</a>
 </div>
 
 @section Scripts {
