--- a/Conferences/Views/Conferences/Index.cshtml
+++ b/Conferences/Views/Conferences/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Conferences";
 }
 
-<h1>Конференції y @ViewBag.LocationCity</h1>
+<h1>Конференції</h1>
 
 <p>
     @Html.ActionLink("Додати нову конференцію", "Create", new { loctationId = @ViewBag.LocationId })
