--- a/Conferences/Views/Conferences/Delete.cshtml
+++ b/Conferences/Views/Conferences/Delete.cshtml
@@ -75,6 +75,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ConferenceId" />
         <input type="submit" value="Видалити" class="btn btn-danger" /> |
-        <a asp-action="Index">Повернутисьt</a>
+        <a asp-controller="Conferences" asp-action="Index" asp-route-id="ViewBag.LocationId">Повернутись</a>
     </form>
 </div>
