--- a/Conferences/Views/Shared/_Layout.cshtml
+++ b/Conferences/Views/Shared/_Layout.cshtml
@@ -11,13 +11,16 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Locations" asp-action="Index">Локації</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Conferences1" asp-action="Index">Конференції</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Locations" asp-action="Index">Локації</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Organizers" asp-action="Index">Організатори</a>
                         </li>
