--- a/Conferences/Views/Participants/Create.cshtml
+++ b/Conferences/Views/Participants/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Створити</h1>
 
-<h4>Participant</h4>
+<h4>Учасник</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,14 +33,14 @@
                 <span asp-validation-for="Institution" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Створити" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Повернутись</a>
 </div>
 
 @section Scripts {
