імпорт швейцарський годинник

--- a/Conferences/Views/Conferences1/Index.cshtml
+++ b/Conferences/Views/Conferences1/Index.cshtml
@@ -91,7 +91,7 @@
 
 <div>
     <h2>Оберіть файл для заватаження</h2>
-    @using (Html.BeginForm("Import", "Locations", FormMethod.Post, new { enctype = "multipart/form-data", id = "frm-excel" }))
+    @using (Html.BeginForm("Import", "Conferences1", FormMethod.Post, new { enctype = "multipart/form-data", id = "frm-excel" }))
     {
         <div>
             Завантажте файл:
